--- a/playbooks/config_vc.yml
+++ b/playbooks/config_vc.yml
@@ -1,15 +1,7 @@
 ---
 - hosts: localhost
-  vars:
-    vc_host: 10.4.44.11
-    vc_user: administrator@pac.lab
-    vc_pass: Password#1
-    esxi_host: 10.4.44.109
-    esxi_user: root
-    esxi_pass: password
-    vc_dc: Datacenter
-    vc_cl: cluster
-    vc_dvs: VM_6.0_DSwitch
+  vars_files:
+    - ./esx_vars.yml
   tasks:
        - name: Create Datacenter
          local_action:
@@ -33,39 +25,109 @@
            enable_vsan: no
            state: present
            validate_certs: False
-       - name: Create DVSwitches
+       - name: Create VM & MGMT Switches
          local_action:
            module: vmware_dvswitch
            hostname: "{{ vc_host }}"
            username: "{{ vc_user }}"
            password: "{{ vc_pass }}"
            datacenter_name: "{{ vc_dc }}"
-           switch_name: "{{ vc_dvs }}"
+           switch_name: "{{ dvs_vm }}"
            mtu: 1500
            uplink_quantity: 2
            discovery_proto: cdp
            discovery_operation: listen
            state: present
            validate_certs: False
-       - name: Add PortGroups to DVSwitch
+       - name: Create SIO Switches
+         local_action:
+           module: vmware_dvswitch
+           hostname: "{{ vc_host }}"
+           username: "{{ vc_user }}"
+           password: "{{ vc_pass }}"
+           datacenter_name: "{{ vc_dc }}"
+           switch_name: "{{ dvs_sio }}"
+           mtu: 1500
+           uplink_quantity: 2
+           discovery_proto: cdp
+           discovery_operation: listen
+           state: present
+           validate_certs: False
+       - name: Add VM Portgroup to Switch
          local_action:
            module: vmware_dvs_portgroup
            hostname: "{{ vc_host }}"
            username: "{{ vc_user }}"
            password: "{{ vc_pass }}"
-           switch_name: "{{ vc_dvs }}"
-           portgroup_name: pxe_boot
+           switch_name: "{{ dvs_vm }}"
+           portgroup_name: "{{ vm_pg }}" 
            num_ports: 2
            portgroup_type: earlyBinding
-           vlan_id: 1
+           vlan_id: 344
            state: present
            validate_certs: False
-       - name: Add a new vCenter license
+       - name: Add MGMT Portgroup to Switch
          local_action:
-           module: vcenter_license
+           module: vmware_dvs_portgroup
            hostname: "{{ vc_host }}"
            username: "{{ vc_user }}"
            password: "{{ vc_pass }}"
-           license: Z5483-0Y2EL-N8R8J-OXCAP-10P3N
+           switch_name: "{{ dvs_vm }}"
+           portgroup_name: "{{ mgmt_pg }}" 
+           num_ports: 2
+           portgroup_type: earlyBinding
+           vlan_id: 344
+           state: present
+           validate_certs: False
+       - name: Add VLan 10 to Switch
+         local_action:
+           module: vmware_dvs_portgroup
+           hostname: "{{ vc_host }}"
+           username: "{{ vc_user }}"
+           password: "{{ vc_pass }}"
+           switch_name: "{{ dvs_vm }}"
+           portgroup_name: "{{ vl10_pg }}" 
+           num_ports: 2
+           portgroup_type: earlyBinding
+           vlan_id: 10
+           state: present
+           validate_certs: False
+       - name: Add VLan 345 to Switch
+         local_action:
+           module: vmware_dvs_portgroup
+           hostname: "{{ vc_host }}"
+           username: "{{ vc_user }}"
+           password: "{{ vc_pass }}"
+           switch_name: "{{ dvs_vm }}"
+           portgroup_name: "{{ vl345_pg }}" 
+           num_ports: 2
+           portgroup_type: earlyBinding
+           vlan_id: 345
+           state: present
+           validate_certs: False
+       - name: Add SIO Data1 to Switch
+         local_action:
+           module: vmware_dvs_portgroup
+           hostname: "{{ vc_host }}"
+           username: "{{ vc_user }}"
+           password: "{{ vc_pass }}"
+           switch_name: "{{ dvs_sio }}"
+           portgroup_name: "{{ sio1_pg }}" 
+           num_ports: 2
+           portgroup_type: earlyBinding
+           vlan_id: 20
+           state: present
+           validate_certs: False
+       - name: Add SIO Data2 to Switch
+         local_action:
+           module: vmware_dvs_portgroup
+           hostname: "{{ vc_host }}"
+           username: "{{ vc_user }}"
+           password: "{{ vc_pass }}"
+           switch_name: "{{ dvs_sio }}"
+           portgroup_name: "{{ sio2_pg }}" 
+           num_ports: 2
+           portgroup_type: earlyBinding
+           vlan_id: 20
            state: present
            validate_certs: False
