--- a/playbooks/esx_vars.yml
+++ b/playbooks/esx_vars.yml
@@ -1,47 +1,42 @@
 # PacLabs ESX/vCenter env vars
 esxi_user: 'root'
 esxi_pass: 'password'
-dns1: '10.4.44.254'
+dns1: '10.237.198.254'
 dns2: '10.237.33.254'
 dns3: '10.201.16.29'
 domain: 'paclabs.se.lab.emc.com'
-gw: '10.4.44.1'
+gw: '10.237.198.1'
 mask: '255.255.255.0'
-dc: 'Datacenter'
-cl: 'cluster'
-dvs_vm: 'VM_6.0_DSwitch'
-dvs_sio: 'ScaleIO_Data'
-esxivs: 'vswitch0'
-mgmt_pg: 'MGMT_6.0_DPortGroup'
-vm_pg: 'VM_6.0_DPortGroup'
-sio1_pg: 'ScaleIO_Data1_PG'
-sio2_pg: 'ScaleIO_Data2_PG'
+dc: 'PacLabs'
+cl: 'Nehalem'
+dvs_vm: 'vm_dvs'
+dvs_sio: 'sio_data'
+esxivs: 'vSwitch0'
+mgmt_pg: 'mgmt_pg'
+vm_pg: 'pg_344'
+sio1_pg: 'sio1_pg'
+sio2_pg: 'sio2_pg'
 siotemp1: 'sio_temp_pg1'
 siotemp2: 'sio_temp_pg2'
-vl345_pg: 'PG_345'
+vl345_pg: 'pg_345'
+vl10_pg: 'pg_10'
+vl10: '10'
 vl344: '344'
 vl345: '345'
 mdm1: '192.168.10.99'
 mdm2: '192.168.11.99'
 
 # Vcenter variables
-vc_host: 10.4.44.11
+vc_host: 10.237.198.11
 vc_user: 'administrator@pac.lab'
 vc_pass: 'Password#1'
-vc_dc: 'Datacenter'
-vc_cl: 'cluster'
+vc_dc: 'PacLabs'
+vc_cl: 'Nehalem'
 
 R710:
-  
-  # esx108:
-  #   esxi_host: 10.4.44.108
-  #   ds: 'PacLabs008_Boot'
-  #   vmk1: '10.4.44.108'
-  #   vmk2: '192.168.10.8'
-  #   vmk3: '192.168.11.8'
-  PacLabs009:
-    esxi_host: 10.4.44.109
-    ds: 'PacLabs009_Boot'
-    vmk0: '10.4.44.109'
-    vmk1: '192.168.10.9'
-    vmk2: '192.168.11.9'
+  Paclabs002:
+    esxi_host: 10.237.198.106
+    ds: 'PacLabs003_Boot'
+    vmk0: '10.237.198.106'
+    vmk1: '192.168.10.6'
+    vmk2: '192.168.11.6'
